# inner_ellipsoid

./: CMakeLists.txt  README.md
src/: ADOL-C_NLP.cpp  ADOL-C_NLP.hpp
